--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mui/material": "^5.6.4",
     "mysql2": "^2.3.3",
     "next": "12.1.6",
+    "next-absolute-url": "^1.2.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "req": "^0.1.4",
+    "router": "^1.3.7"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
