--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-#host
-/components/config.json
-
 # dependencies
 /node_modules
 /.pnp
@@ -36,3 +33,4 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+components/config.json
