--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^2.3.3",
     "next": "12.1.6",
     "next-absolute-url": "^1.2.2",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "req": "^0.1.4",
